# cdapython

./: .gitignore  README.md  setup.py
cdapython/: __init__.py  application_utilities.py  explore.py  explore_old.py  fetch.py  fetch_old.py
cdapython/config/: logger.yml
pypi_package/: README.md  setup.cfg
pypi_package/src/cdapython/: cda_configuration.py  explore.py
