[metadata]
name = cdapython
version = 1.0.0
description = NCI CRDC CDA Python front-end
author = CDA developers
url = https://github.com/CancerDataAggregator/transform
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
install_requires = 
    pandas >= 1.5.3
    wheel >= 0.42.0
    cda-client >= 1.0.0
    tabulate >= 0.9.0
packages=find:
package_dir=
    =src

[options.packages.find]
where=src


